Fixed bug in footer where it was hidden behind books

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -172,6 +172,7 @@ footer{
     font-size: 13px;
     color: #C9C9C9;
     padding: 5px 10px;
+    z-index: 999;
 }
     #footerLinks
     {
